Fix: Hide dashboards horizontal scrollbar

--- a/packages/dashboards/app/styles/navi-dashboards/components/navi-dashboard.scss
+++ b/packages/dashboards/app/styles/navi-dashboards/components/navi-dashboard.scss
@@ -21,6 +21,7 @@
 
   &__widgets {
     flex: 1;
+    overflow-x: hidden;
     overflow-y: auto;
     padding: 20px 10px;
   }
